--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ REMOTE_MONGO_PORT=27017
 DB_NAME=micro_algas
 
 # Credenciales API
-CLIENT_ID=119
-CLIENT_SECRET=RrjCh6WINj8PV6dgmf6Xi6SjP5iLnGQVPaULMXsa
+# CLIENT_ID=119
+# CLIENT_SECRET=RrjCh6WINj8PV6dgmf6Xi6SjP5iLnGQVPaULMXsa
